# wledcast

./: .gitignore  README.md  dev-mapping-clock.yaml  dev-mapping-matrix-32x32-straight.yaml  dev-mapping-matrix-32x32.yaml  dev-mapping-matrix-8x8.yaml  dev-mapping-multiring.yaml  dev-mapping-strips.yaml  dev-mapping.yaml  dev-pixelmapper.py  dev-test-clock.py  dev-test-mapping-image-zoom.py  dev-test-mapping.py  dev-test-matrix-image-zoom.py  dev-test-matrix.py  dev-test-multiring-image-zoom.py  dev-test-multiring.py  dev-test.py  filter.json  main.py  pixel_writer.py  pyproject.toml  requirements.txt  screen_capture.py  test_pixel_writer.py  user_interface.py
wledcast/: __main__.py  config.py  dxcam_capture.py  filter.json  image_processor.py  keyboard_handler.py  main.py  model.py  pixel_writer.py  screen_capture.py  terminal_interface.py  user_interface.py  wled_discovery.py
wledcast/capture/: capture_dxcam.py  capture_mss.py  capture_screen.py  image_processor.py
wledcast/mapper/: __init__.py  controller.py  generator.py  shape.py  source.py  test.py
wledcast/ui/: gui.py  keyboard.py  terminal.py
wledcast/wled/: caster.py  discovery.py  pixel_writer.py
