[project]
name = 'wledcast'
version = '0.3.0'
description = 'Cast a screen to WLED'
authors = [{name = "Paul Pamment"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["wled", "cast", "screen", "wledcast", "led", "display", "esp32", "esp8266",
    "wled-esp32", "wled-esp8266", "monitor", "lighting", "show", "cast-to-wled",
    "ws2012", "ws2812b", "ws2811", "ws2815", "sk6812", "sk6812b", "neopixel", "neopixels",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "asciimatics>=1.15,<2.0",
    "keyboard>=0.13.5,<1.0",
    "mss>=9.0",
    "numpy>=1.26,<2.0",
    "opencv-python>=4.8,<5.0",
    "pillow>=10.0",
    "pywinctl>=0.3,<1.0",
    "requests>=2.31.0",
    "wxpython>=4.2,<5.0",
    "zeroconf>=0.127.0",
    "wxasync>=0.49",
    "aiofiles>=23.2",
]

[project.urls]
homepage = "https://github.com/ppamment/wledcast"
repository = "https://github.com/ppamment/wledcast"
Bug-Tracker = "https://github.com/ppamment/wledcast/issues"

[project.optional-dependencies]
dxcam = ["dxcam>=0.0.5"]

[metadata]
author = "Paul Pamment"
author_email = "p.pamment@gmail.com"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/ppamment/wledcast"


[tool.setuptools.package-data]
wledcast = ["filter.json"]

[project.scripts]
wledcast = 'wledcast.__main__:main'

[options]
python_requires = ">=3.10"
packages = "find: ."

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

