[project]
name = 'wledcast'
version = '0.5.0'
description = 'Cast a screen to WLED'
authors = [{name = "Paul Pamment"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["wled", "cast", "screen", "wledcast", "led", "display", "esp32", "esp8266",
    "wled-esp32", "wled-esp8266", "monitor", "lighting", "show", "cast-to-wled",
    "ws2012", "ws2812b", "ws2811", "ws2815", "sk6812", "sk6812b", "neopixel", "neopixels",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "aiofiles>=23.2",
    "asciimatics>=1.15,<2.0",
    "pynput>=1.7.0,<2.0",
    "mss>=9.0",
    "numpy>=1.26",
    "opencv-python>=4.8,<5.0",
    "pillow>=10.0",
    "pymonctl>=0.4",
    "pywinctl>=0.3,<1.0",
    "requests>=2.31.0",
    "wxasync>=0.49",
    "wxpython>=4.2,<5.0",
    "zeroconf>=0.127.0",
]

[project.urls]
homepage = "https://github.com/ppamment/wledcast"
repository = "https://github.com/ppamment/wledcast"
Bug-Tracker = "https://github.com/ppamment/wledcast/issues"

[tool.setuptools.package-data]
wledcast = ["filter.json"]

[project.scripts]
wledcast = 'wledcast.__main__:main'

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

